I am limiting tests to only required tags in the response, as other relay implementations may behave differently.